Correct docs content spacing

--- a/app/global.css
+++ b/app/global.css
@@ -288,7 +288,7 @@ body {
   --tw-prose-td-borders: var(--border);
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.5rem;
   max-width: none;
   font-size: 16px;
   line-height: 28px;
@@ -401,7 +401,7 @@ body {
   border-radius: 0.75rem;
   background: var(--card);
   color: var(--q-prose-body);
-  padding: 1.5rem;
+  padding: 1rem;
   font-style: normal;
   line-height: 1.5;
 }
